# ledger-eth-lib

./: .editorconfig  .flake8  .gitignore  .readthedocs.yaml  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.docs.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yaml  tests.yaml
docs/: Makefile  accounts.rst  cli.rst  conf.py  index.rst  install.rst  message_signing.rst  objects.rst  transaction_signing.rst  web3.rst
ledgereth/: __init__.py  __main__.py  _meta.py  accounts.py  comms.py  constants.py  exceptions.py  messages.py  objects.py  transactions.py  types.py  utils.py  web3.py
tests/: __init__.py  conftest.py  fixtures.py  test_chain_id.py  test_comms.py  test_exceptions.py  test_message_signing.py  test_serialization.py  test_transactions.py  test_utils.py  test_web3.py
