[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgereth"
description = "Library to interface with ledger-app-eth on Ledger hardware wallets"
urls = {source = "https://github.com/mikeshultz/ledger-eth-lib"}
authors =[{name = "Mike Shultz", email = "mike@mikeshultz.com"}]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ethereum", "evm", "blockchain", "development", "ledger"]
license = {file = "LICENSE"}
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Libraries",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
]
dependencies = [
    "eth-utils>=2.1.0,<6",
    "ledgerblue==0.1.48",
    "rlp~=4.0.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "autoflake~=1.4",
    "black>=21.11b1",
    "bump2version~=1.0.1",
    "eth-account>=0.13.1",
    "isort>=5.10.1",
    "mypy>=0.910",
    "pytest>=5.3.2",
    "setuptools>=44.0.0",
    "twine>=3.1.1",
    "web3[tester]~=7.3.1",
    # peer dep of eth-tester of web3[tester]
    #eth-account==0.12.1
    "wheel>=0.33.6",
]
docs = [
    "sphinx~=4.5.0",
    "sphinx-autobuild~=2021.3.14",
    "sphinx-rtd-theme~=1.0.0",
]

[tool.mypy]
exclude = "build/"

[tool.setuptools_scm]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
